--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -71,6 +71,7 @@
     button {
       top: 320px;
       position: relative;
+      margin-top: 12px;
     }
 
     .top-title {
@@ -278,6 +279,7 @@
         .c-b-normal-button {
           position: relative;
           top: unset;
+          margin-top: unset;
         }
       }
     }
